add prometheus endpoint
